--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 		</title>
 	</head>
 	<body>
-			Hello World!!
+			 
+			<section>
+				Welcome to your eternal punishment. You will all die in less than 1 day because Ra would want you to kiss his toes every 10 minutes and you can't do that while you sleep so he will blast you to smitherinesFollow these simple and easy steps to live forever!
+			</section>
+			<section>
+				1. Donate all your money to me
+				2. Go skydiving without a parashoute
+				3. Your Done! You get your reward in 91483756 days. Hope you get it! (You Won't).
+			</section>
+			<p>
+				Please contact me via email if you have any questions about this website.
+			</p>
 	</body>
 </html>
