--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	<body>
 			<nav>
 
-				<a hraf="aboutme.html" />
 					Home
-				</a>
+				<a href="aboutme.html" />
 					About Me
+				</a>
 
-					
+
 			</nav> 
 			<section>
 				Welcome to your eternal punishment. You will all die in less than 1 day because Ra would want you to kiss his toes every 10 minutes and you can't do that while you sleep so he will blast you to smithereens. Follow these simple and easy steps to live forever and never die when he blasts you!
