--- a/aboutme.html
+++ b/aboutme.html
@@ -16,10 +16,11 @@
 			Hello, My name is Dante
 		</section>
 		<section>
-			Hi! I am 11 years old and I live in Los Angeles, California. I ave lived here for about a year and its awesome. I go to New Roads school, its a great community.
+			Hi! I am 11 years old and I live in Los Angeles, California. I ave lived here for about a year and its awesome. I go to New Roads school, its a great community. I am also a big jokster if you were wondering.
 		</section>
 		<section>
 			My favourite movies is CHIPS, The Boss Baby and Kong Skull Island. My favourite music is gaming. My favourite animal is a dog and I really want one, but my mom and dad say no. 
+			<img src="http://cdn3-www.dogtime.com/assets/uploads/gallery/goldador-dog-breed-pictures/puppy-1.jpg" />
 		</section>
 	</body>
 </html>
