--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
 		</section>
 		<section>
 			My favourite movies is CHIPS, The Boss Baby and Kong Skull Island. My favourite music is gaming. My favourite animal is a dog and I really want one, but my mom and dad say no. 
-			<img src="http://cdn3-www.dogtime.com/assets/uploads/gallery/goldador-dog-breed-pictures/puppy-1.jpg" />
+			<img style="width:200px;" src=http://cdn3-www.dogtime.com/assets/uploads/gallery/goldador-dog-breed-pictures/puppy-1.jpg" />
 		</section>
 	</body>
 </html>
