--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>About Me</title>
 	</head>
-	<body>
+	<body style="background-color:red;color:green;">
 		<nav>
 
 			<a href="index.html" />
@@ -12,7 +12,7 @@
 
 
 		</nav>
-		<section style="background-color:red;color:green;">
+		<section>
 			Hello, My name is Dante
 		</section>
 		<section>
