--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>About Me</title>
 	</head>
-	<body style="background-color:red;color:green;">
+	<body style="background-color:red;color:green;font-size:30px;font-weight:bolder;">
 		<nav>
 
 			<a href="index.html" />
@@ -12,16 +12,20 @@
 
 
 		</nav>
-		<section>
+		<section style="background-color:yellow4;color:green;">
+>
 			Hello, My name is Dante
 		</section>
-		<section>
+		<section style="background-color:purple;color:pink;">
+
 			Hi! I am 11 years old and I live in Los Angeles, California. I ave lived here for about a year and its awesome. I go to New Roads school, its a great community. I am also a big jokster if you were wondering.
 		</section>
-		<section style="background-color:blue;color:yellow;">
-			My favourite movies is CHIPS, The Boss Baby and Kong Skull Island. My favourite music is gaming. My favourite animal is a dog and I really want one, but my mom and dad say no. 
+		<section >
+			<p style="background-color:blue;color:yellow;">
+				My favourite movies is CHIPS, The Boss Baby and Kong Skull Island. My favourite music is gaming. My favourite animal is a dog and I really want one, but my mom and dad say no. 
+			</p>
 			<br>
-			<img style="width:200px;" src=http://cdn3-www.dogtime.com/assets/uploads/gallery/goldador-dog-breed-pictures/puppy-1.jpg" />
+			<img style="width:350px;" src="http://cdn3-www.dogtime.com/assets/uploads/gallery/goldador-dog-breed-pictures/puppy-1.jpg" />
 		</section>
 	</body>
 </html>
