--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
 		<title>			
 			Hello World!
 		</title>
+		<style>
+			nav{
+				background-color:green;
+				color:red;
+			}
+
+			a:link{
+				color:yellow;
+			}
+
+			a:visited{
+				color: yellow;
+
+			}
+
+			a:hover{
+				color:yellow;
+			}
+		</style>
 	</head>
 	<body style="background-color:red;color:yellow;font-size:30px;font-weight:bolder;">
+		<div style="background-color:red;color:green;
+					margin:30px;padding:15px;
+					border-radius:25px;text-align:center;">
 			<nav>
-
-					Home
+					<a href="index.html">
+						Home
+					</a>
 				<a href="aboutme.html" />
 					About Me
 				</a>
@@ -18,11 +41,12 @@
 				Welcome to your eternal punishment. You will all die in less than 1 day because Ra would want you to kiss his toes every 10 minutes and you can't do that while you sleep so he will blast you to smithereens. Follow these simple and easy steps to live forever and never die when he blasts you!
 			</section>
 			<section style="background-color:green;color:blue;">
-				1. Donate all your money to me
+				1. Donate all you money to me
 				2. Go skydiving without a parashoute
 				3. Your Done! You get your reward in 91483756 days. Hope you get it! (You Won't).
 				<br>
 				Please contact me via email if you have any questions about this website.
-	w		</section>
+			</section> 
+		</div>
 	</body>
 </html>
