--- a/aboutme.html
+++ b/aboutme.html
@@ -4,13 +4,15 @@
 	</head>
 	<body style="background-color:red;color:green;font-size:30px;font-weight:bolder;">
 		<nav>
-				
+
 			<a href="index.html" />
 				Home
 			</a>
 				About Me
 
-
+			<a href="Projects.html">
+				Projects
+			</a>
 		</nav>
 		<section style="background-color:yellow4;color:green;">
 >
@@ -22,7 +24,7 @@
 		</section>
 		<section >
 			<p style="background-color:blue;color:yellow;">
-				My favourite movies is CHIPS, The Boss Baby and Kong Skull Island. My favourite music is gaming. My favourite animal is a dog and I really want one, but my mom and dad say no. 
+				My favourite movies is CHIPS, The Boss Baby and Kong Skull Island. My favourite music is gaming. My favourite animal is a dog and I really want one, but I can't have one.
 			</p>
 			<br>
 			<img style="width:350px;" src="http://cdn3-www.dogtime.com/assets/uploads/gallery/goldador-dog-breed-pictures/puppy-1.jpg" />
