--- a/Projects.html
+++ b/Projects.html
@@ -1,7 +1,57 @@
 <html>
-	<head>
-		<title>
+		<head>
+			<title>
+				Projects
+			</title>
+		</head>
+	<body style="background-color:red;color:green;font-size:30px;font-weight:bolder;">
+
+	<nav>
+		
+		<a href="index.html">
+			Home
+		</a>
+
+		<a href="aboutme.html">
+			About Me
 			
-		<title>
-	<head>
-<html>
+		</a>
+
+		<a href="clickable.html">
+					Clickable
+		</a>
+
+	</nav>
+
+	<section style="background-color:green;color:blue"> 
+		
+		<p>
+		This is going to be the place where I will show you guys some of my different projects. There are going to always come more and more all the time! I will tell you guys before I stop as a "warning", but stay tuned for now!
+		</p>
+
+	</section>
+
+	<section>
+		<img style="width:350px;" src="https://extension.umd.edu/sites/extension.umd.edu/files/_docs/programs/4-H/Volunteer/Projects2.jpg">
+	</section>
+
+	<section>
+		 
+	<li>
+		Project 1
+	</li>
+
+	<li>
+		Project 2
+	</li>
+
+	<li>
+		Project 3
+	</li>
+
+
+
+	</section>
+
+	</body>
+</html>
