--- a/aboutme.html
+++ b/aboutme.html
@@ -13,14 +13,20 @@
 			<a href="Projects.html">
 				Projects
 			</a>
+			
+			<a href="clickable.html">
+					Clickable
+		</a>
+
 		</nav>
-		<section style="background-color:yellow4;color:green;">
+		<section style="background-color:yellow;color:green;">
 >
 			Hello, My name is Dante
+
 		</section>
 		<section style="background-color:purple;color:pink;">
 
-			Hi! I am 11 years old and I live in Los Angeles, California. I ave lived here for about a year and its awesome. I go to New Roads school, its a great community. I am also a big jokster if you were wondering.
+			Hi! I am 11 years old and I live in Los Angeles, California. I ave lived here for about a year and its awesome. I am also a big jokster if you were wondering.
 		</section>
 		<section >
 			<p style="background-color:blue;color:yellow;">
