--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
 					About Me
 				</a>
 
+				<a href="Projects.html">
+					Projects
+				</a>
+
+				<a href="clickable.html">
+					Clickable
+				</a>	
 
 			</nav> 
 			<section>
