I added The Text JavaScript and Som emore info Thanks!

--- a/Clickable.html
+++ b/Clickable.html
@@ -2,9 +2,9 @@
 	<head>
 		<title>Clickable</title>
 	</head>
-	<body 2
+	<body> 
 
-				<a href="index.html"/>
+			<a href="index.html">
 				Home
 			</a>
 
