--- a/Projects.html
+++ b/Projects.html
@@ -17,10 +17,6 @@
 			
 		</a>
 
-		<a href="clickable.html">
-					Clickable
-		</a>
-
 	</nav>
 
 	<section style="background-color:green;color:blue"> 
@@ -32,13 +28,13 @@
 	</section>
 
 	<section>
-		<img style="width:350px;" src="https://extension.umd.edu/sites/extension.umd.edu/files/_docs/programs/4-H/Volunteer/Projects2.jpg">
-	</section>
 
 	<section>
 		 
 	<li>
-		Project 1
+		<a href="Clickable.html">
+		Clickable
+		</a>
 	</li>
 
 	<li>
@@ -49,7 +45,16 @@
 		Project 3
 	</li>
 
+	<p>
+		Extra Projects:
+		<ul>
+			<li>
+	
+				<a href="TestJavaScript.html">
+					Test JavaScript
+				</a>
 
+			</li>
 
 	</section>
 
