I added 1 lin eof code

--- a/TestJavaScript.html
+++ b/TestJavaScript.html
@@ -21,7 +21,7 @@
 								//change the color
 				document.getElementById("green").style.background = "red";
 				//change the text
-				document.getElementById("green").innerHTML = "Something Will Happen In About, lets see here, about 6 Years Ok?";
+				document.getElementById("green").innerHTML = "Something Will Happen In About, lets see here, about 6 Years Ok? Can Quess What Will Happen? If You Guessed That You Will Die You Are Correct!";
 				//change the color of font
 				document.getElementById("green").style.color = "green";
 			}
