fixed a Capital Letter

--- a/TestJavaScript.html
+++ b/TestJavaScript.html
@@ -49,7 +49,7 @@
 			</p>
 
 			<p id="green" onclick="changeColor2();">
-				Let Me Trick You Again! CLick This For A Riddle!
+				Let Me Trick You Again! Cick This For A Riddle!
 			</p>
 		</section>
 		<section >
