I added Test Hide and Fixed SomeTHINGs ok? Here it is!

--- a/TestJavaScript.html
+++ b/TestJavaScript.html
@@ -21,10 +21,19 @@
 								//change the color
 				document.getElementById("green").style.background = "red";
 				//change the text
-				document.getElementById("green").innerHTML = "Something Will Happen In About, lets see here, about 6 Years Ok? Can Quess What Will Happen? If You Guessed That You Will Die You Are Correct!";
+				document.getElementById("green").innerHTML = "What Walks ON 4 Legs In The Morning, 2 at Noon and 3 at Sunset?!";
 				//change the color of font
 				document.getElementById("green").style.color = "green";
 			}
+
+			function changeColor3(){
+
+								//change the color
+				document.getElementById("blue").style.background = "blue";
+				//change the text
+				document.getElementById("blue").innerHTML = "A Human!";
+				//change the color of font
+				document.getElementById("blue").style.color = "yellow"
 		</script>
 	</head>
 	<body style="background-color:red;color:blue;font-size:30px;font-weight:bolder; text-align: center;"> 
@@ -50,6 +59,10 @@
 
 			<p id="green" onclick="changeColor2();">
 				Let Me Trick You Again! Cick This For A Riddle!
+			</p>
+
+			<p id="blue" onclick="changeColor3();">
+				Click This For The Answer For The Riddle!
 			</p>
 		</section>
 		<section >
