--- a/TestHide.html
+++ b/TestHide.html
@@ -22,7 +22,11 @@
 				color:yellow;
 			}
 		</style>
-
+		<script 
+			function clickMe(){
+			document.getElementById("circle").innerHTML = "Hello!";
+			}
+		</script>>
 		<script>
 			function hideImg(x) {
 			document.getElementById(x).style.visibility="hidden";
@@ -36,6 +40,7 @@
 				document.getElementById(x).style.visibility="visible";
 			}
 		</script>
+
 	</head>
 	<body style="background-color:red;color:yellow;font-size:30px;font-weight:bolder;">
 		<div style="background-color:red;color:green;
