I fixed What I needed to

--- a/TestHide.html
+++ b/TestHide.html
@@ -22,11 +22,11 @@
 				color:yellow;
 			}
 		</style>
-		<script 
+		<script> 
 			function clickMe(){
 			document.getElementById("circle").innerHTML = "Hello!";
 			}
-		</script>>
+		</script>
 		<script>
 			function hideImg(x) {
 			document.getElementById(x).style.visibility="hidden";
