--- a/TestJavaScript.html
+++ b/TestJavaScript.html
@@ -33,7 +33,8 @@
 				//change the text
 				document.getElementById("blue").innerHTML = "A Human!";
 				//change the color of font
-				document.getElementById("blue").style.color = "yellow"
+				document.getElementById("blue").style.color = "yellow";
+			}
 		</script>
 	</head>
 	<body style="background-color:red;color:blue;font-size:30px;font-weight:bolder; text-align: center;"> 
