I added and fixed somethings

--- a/dog-facts/Facts.html
+++ b/dog-facts/Facts.html
@@ -33,8 +33,9 @@
 					Welcome! This is a website that will give you a lot of facts about dogs! Especially Fun Facts!
 			</section> 
 			<section>
-				Here is the First CRAZY Fact, Did you know that 3 dogs survived the sinking of the Titanic?!?! 
+				Here is the First CRAZY Fact, Did you know that 3 dogs survived the sinking of the Titanic?!?! The sad part is that... 3 OUT OF 12 LIVED, 9 DOGS DIED
 			</section>
+			<img src="">
 			Second Fact, 62% of U.S. People own a pet, which means that  72.9 million homes in the U.S. have pets!
 			<section>
 				3rd Fact, a dog can recognize more than 150 human words
