--- a/dog-facts/DogJokes.html
+++ b/dog-facts/DogJokes.html
@@ -30,9 +30,13 @@
 					
 
 			<section>			
-				Now, for some jokes. Here is the first one: What do get when you cross a golden receicever with a phone??? A GOLDEN RECEIVER! 
-				Second Joke, Why can't dogs be the one holding a remote controller during a movie? They will hit paws button!
-				Third Joke, Why are dogs like phones? Dogs also have collar IDs!!!
+				Now, for some jokes. Here is the first one: What do get when you cross a golden retreiver with a phone??? A GOLDEN RECEIVER!
+			</section>
+			<section>
+				Second Joke, Why can't dogs be the one holding a remote controller during a movie? They will hit the paws button!
+			</section>
+			<section>
+				Third Joke, Why are dogs like phones? Dogs also have collar IDs, and you can play games with them!!!
 			</section> 
 			
 				<a href="index.html">
