Just For Now...

--- a/dog-facts/DogJokes.html
+++ b/dog-facts/DogJokes.html
@@ -29,14 +29,14 @@
 					border-radius:25px;text-align:center;">
 					
 
-			<section>			
-				Now, for some jokes. Here is the first one: What do get when you cross a golden retreiver with a phone??? A GOLDEN RECEIVER!
+			<section style="color:red;background-color:blue">			
+				Now, for some jokes. Here is the first one: What do get when you cross a golden receicever with a phone??? A GOLDEN RECEIVER!
+			</section> 
+			<section style="color:blue;background-color:green">
+				Second Joke, Why can't dogs be the one holding a remote controller during a movie? They will hit paws button!
 			</section>
-			<section>
-				Second Joke, Why can't dogs be the one holding a remote controller during a movie? They will hit the paws button!
-			</section>
-			<section>
-				Third Joke, Why are dogs like phones? Dogs also have collar IDs, and you can play games with them!!!
+			<section style="background-color:yellow;color:green">
+				Third Joke, Why are dogs like phones? Dogs also have collar IDs!!!
 			</section> 
 			
 				<a href="index.html">
