--- a/dog-facts/Facts.html
+++ b/dog-facts/Facts.html
@@ -1,4 +1,4 @@
-<html>
+4<html>
 	<head>
 		<title>			
 			Dog Facts 
@@ -24,7 +24,7 @@
 		</style>
 	</head>
 	<body style="background-color:red;color:yellow;font-size:30px;font-weight:bolder;">
-		<div style="background-color:red;color:green;
+		<div style="background-color:red;color:blue;
 					margin:30px;padding:15px;
 					border-radius:25px;text-align:center;">
 					
@@ -32,15 +32,14 @@
 			<section style="background-color: yellow; color: green">
 					Welcome! This is a website that will give you a lot of facts about dogs! Especially Fun Facts!
 			</section> 
-			<section>
-				Here is the First CRAZY Fact, Did you know that 3 dogs survived the sinking of the Titanic?!?! The sad part is that... 3 OUT OF 12 LIVED, 9 DOGS DIED
-			</section>
-			<img src="">
+			<section style="color:red;background-color:green">
+				Here is the First CRAZY Fact, Did you know that 3 dogs survived the sinking of the Titanic?!?! 
+			<section style="color:green;background-color:red">
 			Second Fact, 62% of U.S. People own a pet, which means that  72.9 million homes in the U.S. have pets!
-			<section>
+			<section style="color:blue;background-color:yellow">
 				3rd Fact, a dog can recognize more than 150 human words
 			</section>
-			<section>
+			<section style="color:yellow;background-color:blue">
 				4th Fact, Arsenic can be deadly to dogs
 				And Finally a 5th Fact, Dogs hate being alone.
 			</section>
