I added some fatcs

--- a/dog-facts/Facts.html
+++ b/dog-facts/Facts.html
@@ -41,7 +41,16 @@
 			</section>
 			<section style="color:yellow;background-color:blue">
 				4th Fact, Arsenic can be deadly to dogs
-				And Finally a 5th Fact, Dogs hate being alone.
+				5th Fact, Dogs hate being alone.
+			</section>
+			<section>
+	The most dogs owned by one person is 5000 mastiffs whose owner was  Kublai Khan.
+			</section>
+			<section style="color:red;background-color:green">
+				Did you know that there are about 400 million dogs in the world.
+			</section>
+			<section style="color:yellow;background-color:blue">
+				Did you know that more that half of all the U.S presidents owned dogs!
 			</section>
 				<a href="index.html">
 						Home Page
