I cleaned my website

--- a/dog-facts/DogJokes.html
+++ b/dog-facts/DogJokes.html
@@ -30,14 +30,20 @@
 					
 
 			<section style="color:red;background-color:blue">			
-				Now, for some jokes. Here is the first one: What do get when you cross a golden receicever with a phone??? A GOLDEN RECEIVER!
+				Now, for some jokes. Here is the first one: What do get when you cross a golden receicever with a phone??? A GOLDEN RECEIVER!!
 			</section> 
 			<section style="color:blue;background-color:green">
-				Second Joke, Why can't dogs be the one holding a remote controller during a movie? They will hit paws button!
+				Second Joke, Why can't dogs be the one holding a remote controller during a movie? They will hit paws button!!
 			</section>
 			<section style="background-color:yellow;color:green">
-				Third Joke, Why are dogs like phones? Dogs also have collar IDs!!!
+				Third Joke, Why are dogs like phones? Dogs also have collar IDs!!
 			</section> 
+			<section style="background-color:red;color:blue">
+				Fourth Joke, What kind of dog chases anything red? A Bulldog!!
+			</section>
+			<section style="color:yellow;background-color:blue">
+				Fifth Joke, Why did the dog cross the road? To get to the barking lot!! 
+			</section>
 			
 				<a href="index.html">
 						Home Page
