I added about 4 Websites

--- a/dog-facts/DogJokes.html
+++ b/dog-facts/DogJokes.html
@@ -44,6 +44,9 @@
 			<section style="color:yellow;background-color:blue">
 				Fifth Joke, Why did the dog cross the road? To get to the barking lot!! 
 			</section>
+			<section>
+				How is a dog and a marine biologist alike? One wags a tail and the other tags a whale. 
+			</section>
 			
 				<a href="index.html">
 						Home Page
