--- a/Computers/Pros_And_Cons.html
+++ b/Computers/Pros_And_Cons.html
@@ -37,6 +37,7 @@
 			</section> 
 
 			<section>
+				Lets start with the Cons shall we? Here we go, first one, computers can break pretty easily and they are not waterproof. Some more are you might get addicted and waste money on online things like bonuses, Pay to Win games and more.  Wrist and finger pain may occur in users who spend years typing with improper mechanics. Other users develop lower back, spine or neck pain from poor posture. Straining to see the screen in addition to exposure to the brightness of the computer monitor may cause blurred vision, headaches
 			</section>
 			
 
