--- a/Computers/Computer_Coding.html
+++ b/Computers/Computer_Coding.html
@@ -39,7 +39,7 @@
 			<section>
 				As you all know that in the evolving world computers are an important part, especially coding becuase you need it to make/create all the websites, big websites like Google Chrome even needs to be coded! 
 			</section>
-				To code a website, you need to find a reliable source to publish it on the web. Like github or wix etc, and then you need to find an actual coding app where the coding happens, like Subline Text or jEdit or something. Read on to get more info.
+				To code a website, you need to find a reliable source to publish it on the web. Like github or wix etc, and then you need to find an actual coding app where the coding happens, like Subline Text or jEdit or something. Read on to learn more about computers. Click the links below to get more info about computers. Links:
 			
 
 			<a href="Fun_And_Games.html">
