--- a/Computers/Fun_And_Games.html
+++ b/Computers/Fun_And_Games.html
@@ -37,6 +37,7 @@
 			</section> 
 
 			<section>
+				Hi, welcome to the Fun and Games section of this website! Here we gooooo! There are websites that have a lot of games inside them for things like fast access and promotion. These include Unblocked Games 66, Unblocked Games 77, Kizi, GameDuell, st math, Pogo, Miniclip, Addicting Games, Kongregate, Armor Games, PCH Games, FOG, and Big Fish Games are all good big examples. They make games and they have gaming websites that have all their games on them. You can also watch a bunch of youtube videos on games, vlogs, blogs and toturials, and they are all fun to watch (most of the time).
 			</section>
 			
 
