--- a/Computers/Pros_And_Cons.html
+++ b/Computers/Pros_And_Cons.html
@@ -37,7 +37,10 @@
 			</section> 
 
 			<section>
-				Lets start with the Cons shall we? Here we go, first one, computers can break pretty easily and they are not waterproof. Some more are you might get addicted and waste money on online things like bonuses, Pay to Win games and more.  Wrist and finger pain may occur in users who spend years typing with improper mechanics. Other users develop lower back, spine or neck pain from poor posture. Straining to see the screen in addition to exposure to the brightness of the computer monitor may cause blurred vision, headaches
+				Lets start with the Cons shall we? Here we go, first one, computers can break pretty easily and they are not waterproof. Some more are you might get addicted and waste money on online things like bonuses, Pay to Win games and more. Your wrists and fingers might start hurting. Other people could get lower back, spine or neck pain. Trying to see the screen and exposure to the brightness of the computer may cause blurred vision, and headaches. They might have 'too' much info for small kids though.
+			</section>
+			<section style="background-color: green; color: blue">
+				Now for the Pros. Some are that computers are very educational and provide useful information about a lot of things. Others are like, instead of teachers and students having to write a lot on paper and grades and so on, a computer can do it all for you! You can communicate with people all around the world, nearly ANYWHERE. There are lots of games and videos and video-game videos toturials and so on.
 			</section>
 			
 
