--- a/Computers/Fun_And_Games.html
+++ b/Computers/Fun_And_Games.html
@@ -37,7 +37,27 @@
 			</section> 
 
 			<section>
-				Hi, welcome to the Fun and Games section of this website! Here we gooooo! There are websites that have a lot of games inside them for things like fast access and promotion. These include Unblocked Games 66, Unblocked Games 77, Kizi, GameDuell, st math, Pogo, Miniclip, Addicting Games, Kongregate, Armor Games, PCH Games, FOG, and Big Fish Games are all good big examples. They make games and they have gaming websites that have all their games on them. You can also watch a bunch of youtube videos on games, vlogs, blogs and toturials, and they are all fun to watch (most of the time).
+				Hi, welcome to the Fun and Games section of this website! Here we gooooo! There are websites that have a lot of games inside them for things like fast access and promotion. These include Unblocked Games 66, Unblocked Games 77, Kizi, GameDuell, st math, Pogo, Miniclip, Addicting Games, Kongregate, Armor Games, PCH Games, FOG, and Big Fish Games are all good big examples. They make games and they have gaming websites that have all their games on them. You can also watch a bunch of youtube videos on games, vlogs, blogs and toturials, DIY and more sorts of videos, and they are all fun to watch (most of the time).
+			</section>
+
+			<section>
+				Thought this would be fun, here are a bunch of random facts:
+				What party did madison belong to?
+Breaking with Hamilton and what became the Federalist Party in 1791, Madison and Thomas Jefferson organized what they called the Republican Party (later called by historians the Democratic-Republican Party).
+
+				When was the world discovered to be round?
+After the Greek philosophers Pythagoras, in the 6th century BC, and Parmenides, in the 5th, recognized that the Earth is spherical, the spherical view spread rapidly in the Greek world. Around 330 BC, Aristotle maintained on the basis of physical theory and observational evidence that the Earth was spherical.
+
+				When was the world discovered to be round?
+After the Greek philosophers Pythagoras, in the 6th century BC, and Parmenides, in the 5th, recognized that the Earth is spherical, the spherical view spread rapidly in the Greek world. Around 330 BC, Aristotle maintained on the basis of physical theory and observational evidence that the Earth was spherical.
+			
+				What city extends to two continents?
+Almost all of it lies in Asia, but a small portion extends into Europe. Istanbul, the largest city of Turkey and best-known example. The Bosporus Strait separates its European and Asian portions.
+
+				When was alcohol made legal again?
+Alcohol consumption was never illegal under federal law. Nationwide prohibition did not begin in the United States until 1920, when the Eighteenth Amendment to the U.S. Constitution went into effect, and was repealed in 1933, with the ratification of the Twenty-first Amendment.
+
+There, that was a bunch of random facts, read on to learn more:
 			</section>
 			
 
